--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>JianzheLin's Homepage-UCAS</title>
 
 <link rel="stylesheet" href="site.css">
-<meta name="description" content="Qi WANG&#39;s webpage">
+<meta name="description" content="Jianzhe Lin&#39;s webpage">
 <meta name="keywords" content="">
 </head>
 <body class="short-header-page wsite-theme-light wsite-page-index" onload="count();">
@@ -16,7 +16,7 @@
 		<td width="200">
 		<p align="center">
 		<font face="Arial">
-		<img src="meme.jpg" id="me" itemprop="photo"></font></td>
+		<img border="0" src="me-bw.jpg"></font></td>
 		<td ><b> <span class="STYLE7">Jianzhe Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Master Student</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for OPTical IMagery Analysis and Learning (OPTIMAL)</span></p>
