--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">T5-1104 RongkeTiancheng, Qiuchang Street, Jianghan District, Wuhan, Hubei, China</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel:(86)156-6460-0891</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com">jianzhelin@gmail.com;linjianzhe@opt.cn</span></p>
-		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="cv.pdf" class="first">CV</a></p>
+		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="cv.pdf">CV</a></p>
         <span id="idJsShow"></span>
 		</p>
         
@@ -35,6 +35,9 @@
        </div>
  </div>
 
+ <div id="main-wrap">
+	<div class="container">
+		<div id="wsite-content" class="wsite-elements wsite-not-footer">
  <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">News</span></h2>
 <table border="0" width="900" id="table2" >
 	<tr>
@@ -52,9 +55,7 @@
 </table>
 
  
-<div id="main-wrap">
-	<div class="container">
-		<div id="wsite-content" class="wsite-elements wsite-not-footer">
+
  <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Education</span></h2>
 <table border="0" width="900" id="table2" >
 	<tr>
@@ -108,7 +109,7 @@
 <table border="0" width="900" id="table2" >
 <ol style="margin-left:2em">
 	<tr>
-	    <td class="STYLE11"><a><img src="chart4.jpg" class="publogo" width="192" height="96"></a></td>
+	    <td class="STYLE11"><a><img src="chart4.jpg" class="publogo" width="256" height="128"></a></td>
 		<td class="STYLE12"><strong><a itemprop="name">Theory and Application for Precision Processing and Intelligent Spatial Information Transformation of High Resolution Remote Sensing Satellite Data</a></strong><br><span itemprop="description">Key Project of Chinese National Programs for Fundamental Research and Development, Team leader.</span></td>
 	</tr>
 	<tr>
