--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE11" width="180">•	09/2015-07/2016</td>
-		<td class="STYLE12"> <b>I'm looking for a PH.D opportunity</b></td>
+		<td class="STYLE12"><span id="counter" style="color:#FF0000;font-size: 18pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;"> I'm looking for a PH.D opportunity</span></td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	2015-09-17</td>
@@ -137,7 +137,7 @@
 <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Honors and Certificates</span></h2>
 	<table border="0" width="900" id="table2" >
 		<tr>
-			<td class="STYLE11" width="180">•	2013</td·
+			<td class="STYLE11" width="180">•	2013</td>
 			<td class="STYLE12">Individual Scholarship</td>
 		</tr>		
 		<tr>
