--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE11" width="180">•	09/2015-07/2016</td>
-		<td class="STYLE12"><span id="counter" style="color:#FF0000;font-size: 18pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;"> I'm looking for a PH.D opportunity</span></td>
+		<td class="STYLE12"><span id="counter" style="color:#856363;font-size: 18pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;"> I'm looking for a PH.D opportunity</span></td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	2015-09-17</td>
