--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	2015-09-03</td>
-		<td class="STYLE12">A paper "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking" is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385"><em>IEEE Transaction onNeural Networks and Learning Systems (IEEE)</em></a></td>
+		<td class="STYLE12">A paper "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking" is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385"><em>IEEE Transaction on Neural Networks and Learning Systems (IEEE)</em></a></td>
 	</tr>
 </table>
 
@@ -60,10 +60,10 @@
 <table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE11" width="180">•	09/2013-07/2016</td>
-		<td class="STYLE12">M.S., Computer Science,<a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a> GPA: 3.44/4.00;<br> Supervisor: Prof. <a href="crabwq.github.io"> Qi Wang</a>, member, IEEE, Yuan Yuan, senior member,IEEE and Xuelong Li, fellow, IEEE </td>
+		<td class="STYLE12">M.S., Computer Science,<a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a> GPA: 3.44/4.00;<br> Supervisor: Prof. Yuan Yuan, <a href="http://www.dcs.bbk.ac.uk/~xuelong/"> Xuelong Li</a> and<a href="crabwq.github.io"> Qi Wang</a></td>
 	</tr>
 	<tr>
-		<td class="STYLE11" width="180">•	09/2005-07/2010</td>
+		<td class="STYLE11" width="180">•	09/2009-07/2013</td>
 		<td class="STYLE12">B.S., Optoelectronic Information Engineering,<a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a> GPA: 3.57/4.00;<br> B.A., English,Huazhong University of Science and Technology</td>
 	</tr>
 </table>   
@@ -166,7 +166,7 @@
 
 
 <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Skills and Student Titles</span></h2>
-    <p class="STYLE15">•	ProgramProficient in <i>Matlab, AI, LaTex</i>, grasp <i>C/C++, PS, OpenGL, github, HTML5</i></p>
+    <p class="STYLE15">•	Program: Proficient in <i>Matlab, AI, LaTex</i>, grasp <i>C/C++, PS, OpenGL, github, HTML5</i></p>
     <p class="STYLE15">•	<i>Monitor of grade 2013</i></p>             
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
