--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">T5-1104 RongkeTiancheng, Qiuchang Street, Jianghan District, Wuhan, Hubei, China</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel:(86)156-6460-0891</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com">jianzhelin@gmail.com;linjianzhe@opt.cn</span></p>
-		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="cv.pdf">CV</a></p>
+		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mycv.pdf">CV</a></p>
         <span id="idJsShow"></span>
 		</p>
         
@@ -60,7 +60,7 @@
 <table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE11" width="180">•	09/2013-07/2016</td>
-		<td class="STYLE12">M.S., Computer Science, <a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a> GPA: 3.44/4.00;<br> Supervisor: Prof. Yuan Yuan, <a href="http://www.dcs.bbk.ac.uk/~xuelong/"> Xuelong Li</a> and<a href="crabwq.github.io"> Qi Wang</a></td>
+		<td class="STYLE12">M.S., Computer Science, <a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a> GPA: 3.44/4.00;<br> Supervisor: Prof. Yuan Yuan, <a href="http://www.dcs.bbk.ac.uk/~xuelong/"> Xuelong Li</a> and<a href="http://crabwq.github.io/"> Qi Wang</a></td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	09/2009-07/2013</td>
