--- a/index.html
+++ b/index.html
@@ -44,13 +44,18 @@
 		<td class="STYLE11" width="180">•	09/2015-07/2016</td>
 		<td class="STYLE12"><span id="counter" style="color:#856363;font-size: 18pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;"> I'm looking for a PH.D opportunity</span></td>
 	</tr>
+		<tr>
+		<td class="STYLE11" width="180">•	2015-09-28</td>
+		<td class="STYLE12">One paper “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization” is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221036"><em>IEEE Transaction on Cybernetics (IEEE)</em></a></td>
+	</tr>
+</table>
 	<tr>
 		<td class="STYLE11" width="180">•	2015-09-17</td>
-		<td class="STYLE12"> A paper "Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis" is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=36"><em>IEEE Transaction on Geoscience and Remote Sensing (IEEE)</em></a></td>
+		<td class="STYLE12"> One paper "Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis" is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=36"><em>IEEE Transaction on Geoscience and Remote Sensing (IEEE)</em></a></td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	2015-09-03</td>
-		<td class="STYLE12">A paper "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking" is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385"><em>IEEE Transaction on Neural Networks and Learning Systems (IEEE)</em></a></td>
+		<td class="STYLE12">One paper "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking" is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385"><em>IEEE Transaction on Neural Networks and Learning Systems (IEEE)</em></a></td>
 	</tr>
 </table>
 
