--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<td class="STYLE11" width="180">•	09/2015-07/2016</td>
 		<td class="STYLE12"><span id="counter" style="color:#856363;font-size: 18pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;"> I'm looking for a PH.D opportunity</span></td>
 	</tr>
-		<tr>
+	<tr>
 		<td class="STYLE11" width="180">•	2015-09-28</td>
 		<td class="STYLE12">One paper “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization” is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221036"><em>IEEE Transaction on Cybernetics (IEEE)</em></a></td>
 	</tr>
@@ -64,11 +64,11 @@
 <table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE11" width="180">•	09/2013-07/2016</td>
-		<td class="STYLE12">M.S., Computer Science, <a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a> GPA: 3.44/4.00;<br> Supervisor: Prof. Yuan Yuan, <a href="http://www.dcs.bbk.ac.uk/~xuelong/"> Xuelong Li</a> and<a href="http://crabwq.github.io/"> Qi Wang</a></td>
+		<td class="STYLE12">M.S., Computer Science, <a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a>;<br> Supervisor: Prof. Yuan Yuan, <a href="http://www.dcs.bbk.ac.uk/~xuelong/"> Xuelong Li</a>(advisor) and<a href="http://crabwq.github.io/"> Qi Wang</a>(advisor)</td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	09/2009-07/2013</td>
-		<td class="STYLE12">B.S., Optoelectronic Information Engineering, <a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a> GPA: 3.57/4.00;<br> B.A., English,Huazhong University of Science and Technology</td>
+		<td class="STYLE12">B.S., Optoelectronic Information Engineering, <a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a>;<br> B.A., English,Huazhong University of Science and Technology</td>
 	</tr>
 </table>   
         
