--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 <div id="footer-wrap">
     <div  class="container" align="center">
-    <p><span id="idTestJson" style="color:#a67d3d;font-size: 14pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;">Last updated: September 2015 </span></p>
+    <p><span id="idTestJson" style="color:#a67d3d;font-size: 14pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;">Last updated: October 20, 2015 </span></p>
 	<p><span id="counter" style="color:#a67d3d;font-size: 12pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;"> Hit Counter: </span><a href="http://www.easycounter.com/"><img src="http://www.easycounter.com/counter.php?crabwq" border="0" alt="Free Hit Counter"></a>
 	<span id="counter" style="color:#a67d3d;font-size: 12pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;">Since July 2015</span></p>
     </div>
