--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
 
 <p class="STYLE11"><b>Regular Reviewer：</b></p>
     <p class="STYLE14">•	Neurocomputing (Elsevier)</p>
-    <p class="STYLE14">•	Big Data Analytics (Bio-Med Central / Springer)</p>
+	<p class="STYLE14">•	Pattern Recognition (Elsevier)</p>
+    <p class="STYLE14">•	Big Data Analytics (Bio-Med Central / Springer)</p>	
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
 
