--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<td ><b> <span class="STYLE7">Jianzhe Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Master Student</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for OPTical IMagery Analysis and Learning (OPTIMAL)</span></p>
-        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">T5-1104 RongkeTiancheng, Qiuchang Street, Jianghan District, Wuhan, Hubei, China</span></p>
+        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">No.19A Yuquan Road, Beijing 100049, China</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel:(86)156-6460-0891</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com">jianzhelin@gmail.com;linjianzhe@opt.cn</span></p>
 		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mycv.pdf">CV</a></p>
@@ -64,7 +64,7 @@
 <table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE11" width="180">•	09/2013-07/2016</td>
-		<td class="STYLE12">M.S., Computer Science, <a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a>;<br> Supervisor: <a href="http://www.aston.ac.uk/eas/staff/a-z/dr-yuan-yuan/">Prof. Yuan Yuan</a>, <a href="http://www.dcs.bbk.ac.uk/~xuelong/"> Xuelong Li</a>(advisor) and<a href="http://crabwq.github.io/"> Qi Wang</a>(advisor)</td>
+		<td class="STYLE12">M.S., Computer Science, <a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a>;<br> Supervisor: Prof. <a href="http://www.optyjsb.com/about/show.asp?id=805">Yuan Yuan</a>, <a href="http://optimal.opt.ac.cn/"> Xuelong Li</a>(advisor) and<a href="http://crabwq.github.io/"> Qi Wang</a>(advisor)</td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	09/2009-07/2013</td>
@@ -78,10 +78,6 @@
 <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Research Interests</span></h2>
 	<p class="STYLE11">Computer vision, pattern recognition, machine learning methods and their applications particularly in:</p>
 	<table border="0" width="900" id="table2" >
-	<tr>
-		<td class="STYLE16" width="5">•</td>
-		<td class="STYLE17">Video surveillance, including target tracking, abnormal detection, crowd analysis, traffic sign detection, scene understanding, pedestrian detection, etc.</td>
-	</tr>
 	<tr>
 		<td class="STYLE16" width="5">•</td>
 		<td class="STYLE17">Hyperspectral/multispectral image analysis, including classification, segmentation, band selection, abnormal detection, etc.</td>
