--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		<td ><b> <span class="STYLE7">Jianzhe Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Master Student</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for OPTical IMagery Analysis and Learning (OPTIMAL)</span></p>
-        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">No.19A Yuquan Road, Beijing 100049, China</span></p>
+        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">P.O. Box 72, No. 17 Xinxi Road, New Industrial Park, Xi'an Hi-Tech Industrial Development Zone, Xi'an, Shaanxi, P.R. China</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel:(86)156-6460-0891</span></p>
-        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com">jianzhelin@gmail.com;linjianzhe@opt.cn</span></p>
+        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com">jianzhelin@gmail.com; linjianzhe@opt.cn</span></p>
 		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mycv.pdf">CV</a></p>
         <span id="idJsShow"></span>
 		</p>
@@ -35,6 +35,43 @@
        </div>
  </div>
 
+  <div class="container">
+ <hr/>
+ <table border="0" align="center" width="100%" >
+ <tr width="100%" >
+     <td align="center">
+     	<span class="TabList">[<a href="#News">News</a>]</span>
+     </td>
+     <td align="center">
+     	<span class="TabList">[<a href="#Education">Education</a>]</span>
+     </td>
+     <td align="center">
+     	<span class="TabList">[<a href="#ResearchInterests">Research Interests</a>]</span>
+     </td>
+     <td align="center">
+     	<span class="TabList">[<a href="#Publications">Publications</a>]</span>
+     </td>
+     <td align="center">
+     	<span class="TabList">[<a href="#Patents">Patents</a>]</span>
+                       </td>
+     <td align="center">
+     	<span class="TabList">[<a href="#HighlightedProjects">Highlighted Projects</a>]</span>
+     </td>
+     <td  align="center">
+     	<span class="TabList">[<a href="#HonorsandCertificates">Honors and Certificates</a>]</span>
+     </td>
+     <td align="center">
+     	<span class="TabList">[<a href="#Membership">Membership</a>]</span>
+     </td>
+	 <td align="center">
+     	<span class="TabList">[<a href="#SkillsandStudentTitles">Skills and Student Titles</a>]</span>
+     </td>
+     </tr>
+ </table>
+  <hr/>
+ </div>
+
+ 
  <div id="main-wrap">
 	<div class="container">
 		<div id="wsite-content" class="wsite-elements wsite-not-footer">
@@ -156,7 +193,7 @@
 	</table>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
-<p class="STYLE11"><b>Membership:</b></p>
+<p class="STYLE11"><b>Membership</b></p>
 	<p class="STYLE14">•	IEEE Student Member</p>
 
 <p class="STYLE11"><b>Regular Reviewer：</b></p>
