--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE11" width="180">•	09/2013-07/2016</td>
-		<td class="STYLE12">M.S., Computer Science, <a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a>;<br> Supervisor: Prof. <a href="http://www.optyjsb.com/about/show.asp?id=805">Yuan Yuan</a>, <a href="http://optimal.opt.ac.cn/"> Xuelong Li</a>(advisor) and<a href="http://crabwq.github.io/"> Qi Wang</a>(advisor)</td>
+		<td class="STYLE12">M.S., Computer Science, <a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a>;<br> Supervisor: Prof. <a href="http://www.optyjsb.com/about/show.asp?id=805">Yuan Yuan</a>, <a href="http://optimal.opt.ac.cn/"> Xuelong Li</a> and<a href="http://crabwq.github.io/"> Qi Wang</a></td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	09/2009-07/2013</td>
