--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <meta name="keywords" content="">
 </head>
 <body class="short-header-page wsite-theme-light wsite-page-index" onload="count();">
-<div id="header-wrap" style="padding-top:80px">
+<div class="containerall" align="center">
+<div id="header-wrap" style="padding-top:60px">
         <div class="container">
-<table border="0" width="980" id="top" >
+<table border="0" width="100%" id="top" >
 	<tr>
 		<td width="200">
 		<p align="center">
