--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
      <td  align="center">
      	<span class="TabList">[<a href="#HonorsandCertificates">Honors and Certificates</a>]</span>
      </td>
-     <td align="center">
-     	<span class="TabList">[<a href="#Membership">Membership</a>]</span>
-     </td>
 	 <td align="center">
      	<span class="TabList">[<a href="#SkillsandStudentTitles">Skills and Student Titles</a>]</span>
      </td>
@@ -76,7 +73,7 @@
  <div id="main-wrap">
 	<div class="container">
 		<div id="wsite-content" class="wsite-elements wsite-not-footer">
- <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">News</span></h2>
+ <h2 id="News" style="text-align:left; padding-top:20px;"><span class="STYLE10">News</span></h2>
 <table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE11" width="180">•	09/2015-07/2016</td>
@@ -98,7 +95,7 @@
 
  
 
- <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Education</span></h2>
+ <h2 id="Education" style="text-align:left; padding-top:20px;"><span class="STYLE10">Education</span></h2>
 <table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE11" width="180">•	09/2013-07/2016</td>
@@ -113,7 +110,7 @@
 
 
 
-<h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Research Interests</span></h2>
+<h2 id="ResearchInterests" style="text-align:left; padding-top:20px;"><span class="STYLE10">Research Interests</span></h2>
 	<p class="STYLE11">Computer vision, pattern recognition, machine learning methods and their applications particularly in:</p>
 	<table border="0" width="900" id="table2" >
 	<tr>
@@ -126,7 +123,7 @@
 	</tr>
 </table>
 
-<h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Publications</span></h2>
+<h2 id="Publications" style="text-align:left; padding-top:20px;"><span class="STYLE10">Publications</span></h2>
 <ol style="margin-left:2em">    
 	<li class="STYLE13">Y. Yuan, <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> accepted, 2015.</li>
 	<li class="STYLE13">Q. Wang, <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> accepted, 2015.</li>
@@ -137,13 +134,13 @@
 
 
 
-<h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Patents</span></h2>
+<h2 id="Patents" style="text-align:left; padding-top:20px;"><span class="STYLE10">Patents</span></h2>
 <ol style="margin-left:2em">
 	<li class="STYLE13">Y. Yuan, Q. Wang, and <b>J. Lin</b>, “Dual Clustering Based Hyperspectral Image Band Selection via Neighborhood System Analysis,” 201510072842.2, 2015.</li>
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
- <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Highlighted Projects</span></h2>
+ <h2 id="Highlighted Projects" style="text-align:left; padding-top:20px;"><span class="STYLE10">Highlighted Projects</span></h2>
 <table border="0" width="900" id="table2" >
 <ol style="margin-left:2em">
 	<tr>
@@ -172,7 +169,7 @@
 
  
 
-<h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Honors and Certificates</span></h2>
+<h2 id="HonorsandCertificates" style="text-align:left; padding-top:20px;"><span class="STYLE10">Honors and Certificates</span></h2>
 	<table border="0" width="900" id="table2" >
 		<tr>
 			<td class="STYLE11" width="180">•	2013</td>
@@ -204,7 +201,7 @@
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
 
-<h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Skills and Student Titles</span></h2>
+<h2 id="SkillsandStudentTitles" style="text-align:left; padding-top:20px;"><span class="STYLE10">Skills and Student Titles</span></h2>
     <p class="STYLE15">•	Program: Proficient in <i>Matlab, AI, LaTex</i>, grasp <i>C/C++, PS, OpenGL, github, HTML5</i></p>
     <p class="STYLE15">•	<i>Monitor of grade 2013</i></p>             
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
