--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	09/2009-07/2013</td>
-		<td class="STYLE12">B.S., Optoelectronic Information Engineering, <a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a>;<br> B.A., English,Huazhong University of Science and Technology</td>
+		<td class="STYLE12">B.S., Optoelectronic Information Engineering, <a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a>;<br> B.A., English (minor), Huazhong University of Science and Technology</td>
 	</tr>
 </table>   
         
@@ -116,10 +116,6 @@
 	<tr>
 		<td class="STYLE16" width="5">•</td>
 		<td class="STYLE17">Hyperspectral/multispectral image analysis, including classification, segmentation, band selection, abnormal detection, etc.</td>
-	</tr>
-	<tr>
-		<td class="STYLE16" width="5">•</td>
-		<td class="STYLE17">Neural perception modeling, including visual saliency detection, color difference perception, etc.</td>
 	</tr>
 </table>
 
