--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Master Student</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for OPTical IMagery Analysis and Learning (OPTIMAL)</span></p>
         <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">P.O. Box 72, No. 17 Xinxi Road, New Industrial Park, Xi'an Hi-Tech Industrial Development Zone, Xi'an, Shaanxi, P.R. China</span></p>
-        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel:(86)156-6460-0891</span></p>
+        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel: (86)156-6460-0891</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com">jianzhelin@gmail.com; linjianzhe@opt.cn</span></p>
 		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mycv.pdf">CV</a></p>
         <span id="idJsShow"></span>
@@ -121,9 +121,9 @@
 
 <h2 id="Publications" style="text-align:left; padding-top:20px;"><span class="STYLE10">Publications</span></h2>
 <ol style="margin-left:2em">    
-	<li class="STYLE13">Y. Yuan, <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> accepted, 2015.</li>
+	<li class="STYLE13">Y. Yuan, <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> DOI: 10.1109/TGRS.2015.2480866, 2015.</li>
 	<li class="STYLE13">Q. Wang, <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> accepted, 2015.</li>
-	<li class="STYLE13">Y. Yuan, <b>J. Lin</b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> accepted, 2015.</li>
+	<li class="STYLE13">Y. Yuan, <b>J. Lin</b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> DOI: 10.1109/TCYB.2015.2484324, 2015.</li>
 	<li class="STYLE13"><b>J. Lin</b>, Q. Wang, and Y. Yuan, “In Defense of Iterated Conditional Mode for Hyperspectral Image Classification,” <i>IEEE International Conference on Multimedia and Expo (IEEE),</i> pp. 1-6, 2014.<a href="icme2014.pdf"> [PDF] </a></li>	
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
