--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
 		<td class="STYLE11" width="180">•	09/2015-07/2016</td>
 		<td class="STYLE12"><span id="counter" style="color:#856363;font-size: 18pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;"> I'm looking for a PH.D opportunity</span></td>
 	</tr>
+		<tr>
+		<td class="STYLE11" width="180">•	2015-02-17</td>
+		<td class="STYLE12">I am invited as the reviewer for <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221036"><em>IEEE Transaction on Cybernetics (IEEE)</em></a></td>
+	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	2015-09-28</td>
 		<td class="STYLE12">One paper “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization” is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221036"><em>IEEE Transaction on Cybernetics (IEEE)</em></a></td>
@@ -193,7 +197,8 @@
 <p class="STYLE11"><b>Regular Reviewer：</b></p>
     <p class="STYLE14">•	Neurocomputing (Elsevier)</p>
 	<p class="STYLE14">•	Pattern Recognition (Elsevier)</p>
-    <p class="STYLE14">•	Big Data Analytics (Bio-Med Central / Springer)</p>	
+    <p class="STYLE14">•	IEEE Transactions on Cybernetics (IEEE)</p>	
+	<p class="STYLE14">•	Big Data Analytics (Bio-Med Central / Springer)</p>	
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
 
