--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 
 <p class="STYLE11"><b>Regular Reviewer：</b></p>
     <p class="STYLE14">•	the International Conference on Image and Signal Processing 2016 (ICISP 2016)</p>
+	<p class="STYLE14">•	the International Conference on Swarm Intelligence (ICSI 2016)</p>
     <p class="STYLE14">•	Neurocomputing (Elsevier)</p>
 	<p class="STYLE14">•	Pattern Recognition (Elsevier)</p>
     <p class="STYLE14">•	IEEE Transactions on Cybernetics (IEEE)</p>	
