--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 
 <h2 id="Publications" style="text-align:left; padding-top:20px;"><span class="STYLE10">Publications</span></h2>
 <ol style="margin-left:2em">    
-	<li class="STYLE13">Y. Yuan, <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> DOI: 10.1109/TGRS.2015.2480866, 2015.</li>
-	<li class="STYLE13">Q. Wang, <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> accepted, 2015.</li>
-	<li class="STYLE13">Y. Yuan, <b>J. Lin</b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> DOI: 10.1109/TCYB.2015.2484324, 2015.</li>
+	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> DOI: 10.1109/TGRS.2015.2480866, 2015.</li>
+	<li class="STYLE13">Q. Wang(supervisor), <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> accepted, 2015.</li>
+	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> DOI: 10.1109/TCYB.2015.2484324, 2015.</li>
 	<li class="STYLE13"><b>J. Lin</b>, Q. Wang, and Y. Yuan, “In Defense of Iterated Conditional Mode for Hyperspectral Image Classification,” <i>IEEE International Conference on Multimedia and Expo (IEEE),</i> pp. 1-6, 2014.<a href="icme2014.pdf"> [PDF] </a></li>	
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
