--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 
 <h2 id="Publications" style="text-align:left; padding-top:20px;"><span class="STYLE10">Publications</span></h2>
 <ol style="margin-left:2em">    
-	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> DOI: 10.1109/TGRS.2015.2480866, 2015.</li>
-	<li class="STYLE13">Q. Wang(supervisor), <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> accepted, 2015.</li>
-	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> DOI: 10.1109/TCYB.2015.2484324, 2015.</li>
-	<li class="STYLE13"><b>J. Lin</b>, Q. Wang, and Y. Yuan, “In Defense of Iterated Conditional Mode for Hyperspectral Image Classification,” <i>IEEE International Conference on Multimedia and Expo (IEEE),</i> pp. 1-6, 2014.<a href="icme2014.pdf"> [PDF] </a></li>	
+	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> vol. 54, no. 3, pp. 1431-1445, 2016.(SCI, IF:3.514)</li>
+	<li class="STYLE13">Q. Wang(supervisor), <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> DOI: 10.1109/TNNLS.2015.2477537, 2016.(SCI, IF：4.291)</li>
+	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> DOI: 10.1109/TCYB.2015.2484324, 2015.(SCI, IF:3.469)</li>
+	<li class="STYLE13"><b>J. Lin</b>, Q. Wang, and Y. Yuan, “In Defense of Iterated Conditional Mode for Hyperspectral Image Classification,” <i>IEEE International Conference on Multimedia and Expo (IEEE),</i> pp. 1-6, 2014.(EI, accept rate=29.7%)<a href="icme2014.pdf"> [PDF] </a></li>	
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
@@ -199,9 +199,14 @@
 	<p class="STYLE14">•	IEEE Student Member</p>
 
 <p class="STYLE11"><b>Regular Reviewer：</b></p>
+
+    <p class="STYLE14">•	the European Conference on Computer Vision 2016 (ECCV 2016)</p>
+    <p class="STYLE14">•	the European Signal Processing Conference 2016 (Eusipco 2016)</p>
+    <p class="STYLE14">•	the Pacific Rim International Conferences on Artificial Intelligence 2016 (PRICAI 2016)</p>
     <p class="STYLE14">•	the International Conference on Image and Signal Processing 2016 (ICISP 2016)</p>
 	<p class="STYLE14">•	the International Conference on Swarm Intelligence (ICSI 2016)</p>
-    <p class="STYLE14">•	Neurocomputing (Elsevier)</p>
+    <p class="STYLE14">•	the British Machine Vision Conference (BMVC) 2015 (BMVC 2015)</p>
+	<p class="STYLE14">•	Neurocomputing (Elsevier)</p>
 	<p class="STYLE14">•	Pattern Recognition (Elsevier)</p>
     <p class="STYLE14">•	IEEE Transactions on Cybernetics (IEEE)</p>	
 	<p class="STYLE14">•	Big Data Analytics (Bio-Med Central / Springer)</p>	
