--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
  <h2 id="News" style="text-align:left; padding-top:20px;"><span class="STYLE10">News</span></h2>
 <table border="0" width="900" id="table2" >
 	<tr>
-		<td class="STYLE11" width="180">•	09/2015-07/2016</td>
-		<td class="STYLE12"><span id="counter" style="color:#856363;font-size: 18pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;"> I'm looking for a PH.D opportunity</span></td>
+		<td class="STYLE11" width="180">•	09/2016-07/2019(expected)</td>
+		<td class="STYLE12">I'll join the Biomedical and Multimedia Signal Processing research group, Electrical and Computer Engineering Department, University of British Columbia under the supervision of  <a href="http://www.ece.ubc.ca/~zjanew/"><em>Prof. Z. Jane Wang</em></a>.</td>
 	</tr>
 			<tr>
 		<td class="STYLE11" width="180">•	2016-02-23</td>
