--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE11" width="180">•	09/2016-</td>
-		<td class="STYLE12"> I'll join the Biomedical and Multimedia Signal Processing research group, Electrical and Computer Engineering Department, University of British Columbia under the supervision of  <a href="http://www.ece.ubc.ca/~zjanew/"><em>Prof. Z. Jane Wang</em></a>.</td>
+		<td class="STYLE12"> I'll be a PHD candidate in the Biomedical and Multimedia Signal Processing research group, <a href="https://www.ece.ubc.ca/"><em>Electrical and Computer Engineering Department, University of British Columbia</em></a> under the supervision of  <a href="http://www.ece.ubc.ca/~zjanew/"><em>Prof. Z. Jane Wang</em></a>.</td>
 	</tr>
 			<tr>
 		<td class="STYLE11" width="180">•	2016-02-23</td>
