--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
      	<span class="TabList">[<a href="#HonorsandCertificates">Honors and Certificates</a>]</span>
      </td>
 	 <td align="center">
-     	<span class="TabList">[<a href="#SkillsandStudentTitles">Skills and Student Titles</a>]</span>
+     	<span class="TabList">[<a href="#SkillsandStudentTitles">Skills</a>]</span>
      </td>
      </tr>
  </table>
