--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
 		<div id="wsite-content" class="wsite-elements wsite-not-footer">
  <h2 id="News" style="text-align:left; padding-top:20px;"><span class="STYLE10">News</span></h2>
 <table border="0" width="900" id="table2" >
-
+	<tr>
+		<td class="STYLE11" width="180">•	2016-05-16</td>
+		<td class="STYLE12">I am invited as the reviewer for <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=8859"><em>Geoscience and Remote Sensing Letters</em></a></td>
+	</tr>
 
 	<tr>
 		<td class="STYLE11" width="180">•	2016-02-23</td>
@@ -197,7 +200,8 @@
 	<p class="STYLE14">•	IEEE Student Member</p>
 
 <p class="STYLE11"><b>Regular Reviewer：</b></p>
-
+    <p class="STYLE14">•	International Journal of Computer Vision (IJCV)</p>
+    <p class="STYLE14">•	Geoscience and Remote Sensing Letters(GRSL)</p>
     <p class="STYLE14">•	the European Conference on Computer Vision 2016 (ECCV 2016)</p>
     <p class="STYLE14">•	the European Signal Processing Conference 2016 (Eusipco 2016)</p>
     <p class="STYLE14">•	the Pacific Rim International Conferences on Artificial Intelligence 2016 (PRICAI 2016)</p>
