--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE11" width="180">•	2016-05-16</td>
-		<td class="STYLE12">I am invited as the reviewer for <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=8859"><em>Geoscience and Remote Sensing Letters</em></a></td>
+		<td class="STYLE12">I am invited as the reviewer for <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=8859"><em>IEEE Geoscience and Remote Sensing Letters</em></a></td>
 	</tr>
 
 	<tr>
@@ -200,14 +200,11 @@
 	<p class="STYLE14">•	IEEE Student Member</p>
 
 <p class="STYLE11"><b>Regular Reviewer：</b></p>
-    <p class="STYLE14">•	International Journal of Computer Vision (IJCV)</p>
-    <p class="STYLE14">•	Geoscience and Remote Sensing Letters(GRSL)</p>
-    <p class="STYLE14">•	the European Conference on Computer Vision 2016 (ECCV 2016)</p>
+    <p class="STYLE14">•	IEEE Geoscience and Remote Sensing Letters(GRSL)</p>
     <p class="STYLE14">•	the European Signal Processing Conference 2016 (Eusipco 2016)</p>
     <p class="STYLE14">•	the Pacific Rim International Conferences on Artificial Intelligence 2016 (PRICAI 2016)</p>
     <p class="STYLE14">•	the International Conference on Image and Signal Processing 2016 (ICISP 2016)</p>
 	<p class="STYLE14">•	the International Conference on Swarm Intelligence (ICSI 2016)</p>
-    <p class="STYLE14">•	the British Machine Vision Conference (BMVC) 2015 (BMVC 2015)</p>
 	<p class="STYLE14">•	Neurocomputing (Elsevier)</p>
 	<p class="STYLE14">•	Pattern Recognition (Elsevier)</p>
     <p class="STYLE14">•	IEEE Transactions on Cybernetics (IEEE)</p>	
