--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
 		<p align="center">
 		<font face="Arial">
 		<img border="0" src="me-bw.jpg"></font></td>
-		<td ><b> <span class="STYLE7">Jianzhe Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
-		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Master Student</span></p>
-		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for OPTical IMagery Analysis and Learning (OPTIMAL)</span></p>
-        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">P.O. Box 72, No. 17 Xinxi Road, New Industrial Park, Xi'an Hi-Tech Industrial Development Zone, Xi'an, Shaanxi, P.R. China</span></p>
-        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel: (86)156-6460-0891</span></p>
-        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com">jianzhelin@gmail.com; linjianzhe@opt.cn</span></p>
+		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
+		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">PhD Student</span></p>
+		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"></span>315 ICS/CS building, Center for Multimedia and Networking</p>
+        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">2111 Lower Mall, Voncouver, BC, V6T 1Z4 Canada</span></p>
+        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel: (1)778-323-1225</span></p>
+        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com"> jianzhelin@ece.ubc.ca; jianzhelin@gmail.com</span></p>
 		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mycv.pdf">CV</a></p>
         <span id="idJsShow"></span>
-		</p>
-        
+		</p>       
 		
 		</td>
 	</tr>
@@ -75,6 +74,19 @@
 		<div id="wsite-content" class="wsite-elements wsite-not-footer">
  <h2 id="News" style="text-align:left; padding-top:20px;"><span class="STYLE10">News</span></h2>
 <table border="0" width="900" id="table2" >
+<tr>
+		<td class="STYLE11" width="180">•	2016-10-10</td>
+		<td class="STYLE12">I am invited as the reviewer for <a href="http://www.journals.elsevier.com/pattern-recognition"><em>Pattern Recognition(PR)</em></a></td>
+	</tr>
+	<tr>
+		<td class="STYLE11" width="180">•	2016-08-26</td>
+		<td class="STYLE12">I begin to work as a PhD student in Electrical and Computer Engineering Department, University of British Columbia. My supervisor is Professor <a href="http://www.ece.ubc.ca/~zjanew/">Z. Jane Wang. I continue to do my research on Computer vision and Pattern Recoginition.</a></td>
+	</tr>
+
+	<tr>
+		<td class="STYLE11" width="180">•	2016-06-22</td>
+		<td class="STYLE12">I am invited as the reviewer for <a href="https://www.journals.elsevier.com/computer-vision-and-image-understanding/"><em>Computer Vision and Image Understanding(CVIU)</em></a></td>
+	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	2016-05-16</td>
 		<td class="STYLE12">I am invited as the reviewer for <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=8859"><em>IEEE Geoscience and Remote Sensing Letters</em></a></td>
@@ -107,8 +119,12 @@
  <h2 id="Education" style="text-align:left; padding-top:20px;"><span class="STYLE10">Education</span></h2>
 <table border="0" width="900" id="table2" >
 	<tr>
+		<td class="STYLE11" width="180">•	09/2016-07/2020(expected)</td>
+		<td class="STYLE12">Ph.D, Computer Engineering, <a href="http://english.ucas.ac.cn/Pages/default.aspx">Center for Multimedia and Networking, University of British Columbia</a>;<br> Supervisor: Prof. <a href="http://www.ece.ubc.ca/~zjanew/">Z. Jane Wang</a></td>
+	</tr>
+	<tr>
 		<td class="STYLE11" width="180">•	09/2013-07/2016</td>
-		<td class="STYLE12">M.S., Computer Science, <a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a>;<br> Supervisor: Prof. <a href="http://www.optyjsb.com/about/show.asp?id=805">Yuan Yuan</a>, <a href="http://optimal.opt.ac.cn/"> Xuelong Li</a> and<a href="http://crabwq.github.io/"> Qi Wang</a></td>
+		<td class="STYLE12">M.S., Computer Science, <a href="http://english.ucas.ac.cn/Pages/default.aspx">Center for OPTical IMagery Analysis and Learning (OPTIMAL), University of Chinese Academy of Sciences</a>;<br> Supervisor: Prof. <a href="http://www.optyjsb.com/about/show.asp?id=805">Yuan Yuan</a>, <a href="http://optimal.opt.ac.cn/"> Xuelong Li</a> and<a href="http://crabwq.github.io/"> Qi Wang</a></td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	09/2009-07/2013</td>
@@ -130,9 +146,9 @@
 
 <h2 id="Publications" style="text-align:left; padding-top:20px;"><span class="STYLE10">Publications</span></h2>
 <ol style="margin-left:2em">    
-	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> vol. 54, no. 3, pp. 1431-1445, 2016.(SCI, IF:3.514)</li>
-	<li class="STYLE13">Q. Wang(supervisor), <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> vol. 27, no. 6, pp. 1279-1289, 2016.(SCI, IF：4.291)</li>
-	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> DOI: 10.1109/TCYB.2015.2484324, 2015.(SCI, IF:3.469)</li>
+	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> vol. 54, no. 3, pp. 1431-1445, 2016.(SCI, IF:3.514)<a href="TGRS2016.pdf"> [PDF] </a></li>
+	<li class="STYLE13">Q. Wang(supervisor), <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> vol. 27, no. 6, pp. 1279-1289, 2016.(SCI, IF：4.291)<a href="TNN2016.pdf"> [PDF] </a></li>
+	<li class="STYLE13">Y. Yuan(supervisor), <b>J. Lin</b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> vol. 46, no. 12, pp. 2966-2976, 2016.(SCI, IF:3.469)<a href="TCYB2016.pdf"> [PDF] </a></li>
 	<li class="STYLE13"><b>J. Lin</b>, Q. Wang, and Y. Yuan, “In Defense of Iterated Conditional Mode for Hyperspectral Image Classification,” <i>IEEE International Conference on Multimedia and Expo (IEEE),</i> pp. 1-6, 2014.(EI, accept rate=29.7%)<a href="icme2014.pdf"> [PDF] </a></li>	
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
@@ -176,6 +192,7 @@
 
 <h2 id="HonorsandCertificates" style="text-align:left; padding-top:20px;"><span class="STYLE10">Honors and Certificates</span></h2>
 	<table border="0" width="900" id="table2" >
+
 		<tr>
 			<td class="STYLE11" width="180">•	2013</td>
 			<td class="STYLE12">Individual Scholarship</td>
@@ -200,7 +217,9 @@
 	<p class="STYLE14">•	IEEE Student Member</p>
 
 <p class="STYLE11"><b>Regular Reviewer：</b></p>
-    <p class="STYLE14">•	IEEE Geoscience and Remote Sensing Letters(GRSL)</p>
+    <p class="STYLE14">•	C</p>
+    <p class="STYLE14">•	Computer Vision and Image Understanding(CVIU)</p>
+    <p class="STYLE14">•	Pattern Recoginition(PR)</p>
     <p class="STYLE14">•	the European Signal Processing Conference 2016 (Eusipco 2016)</p>
     <p class="STYLE14">•	the Pacific Rim International Conferences on Artificial Intelligence 2016 (PRICAI 2016)</p>
     <p class="STYLE14">•	the International Conference on Image and Signal Processing 2016 (ICISP 2016)</p>
@@ -214,7 +233,9 @@
 
 <h2 id="SkillsandStudentTitles" style="text-align:left; padding-top:20px;"><span class="STYLE10">Skills and Student Titles</span></h2>
     <p class="STYLE15">•	Program: Proficient in <i>Matlab, AI, LaTex</i>, grasp <i>C/C++, PS, OpenGL, github, HTML5</i></p>
-    <p class="STYLE15">•	<i>Monitor of grade 2013</i></p>             
+    <p class="STYLE15">•	<i>Monitor of grade 2013</i></p>   
+    <p class="STYLE15">•	<i>Teaching Assistant for CPEN 211, 09/01/2016-12/30/2016</i></p>   
+    <p class="STYLE15">•	<i>Research Assistant for CPEN 211, 09/01/2016-07/01/2020</i></p>  	
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
 			</div>
